automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -57,7 +57,9 @@
     "class Driver:\n",
     "    pass\n",
     "\n",
-    "    def _first"
+    "    def _first(self):\n",
+    "        pass\n",
+    "    def "
    ]
   },
   {
