automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -59,7 +59,9 @@
     "\n",
     "    def _first(self):\n",
     "        pass\n",
-    "    def "
+    "    def _last(self):\n",
+    "        pass\n",
+    "    def _ "
    ]
   },
   {
