automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -61,7 +61,8 @@
     "        pass\n",
     "    def _last(self):\n",
     "        pass\n",
-    "    def _ "
+    "    def _miles_driven(self):\n",
+    "        "
    ]
   },
   {
