automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -62,6 +62,8 @@
     "    def _last(self):\n",
     "        pass\n",
     "    def _miles_driven(self):\n",
+    "        pass\n",
+    "    def _rating(self):\n",
     "        "
    ]
   },
