--- a/index.ipynb
+++ b/index.ipynb
@@ -64,7 +64,7 @@
     "    def _miles_driven(self):\n",
     "        pass\n",
     "    def _rating(self):\n",
-    "        "
+    "        pass"
    ]
   },
   {
