automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -65,7 +65,7 @@
     "        pass\n",
     "    def _rating(self):\n",
     "        pass\n",
-    "    def g"
+    "    def greet_passenger(self)"
    ]
   },
   {
