automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -65,7 +65,8 @@
     "        pass\n",
     "    def _rating(self):\n",
     "        pass\n",
-    "    def greet_passenger(self, _first, "
+    "    def greet_passenger(self, _first, _last):\n",
+    "        return f\"H\""
    ]
   },
   {
