--- a/index.ipynb
+++ b/index.ipynb
@@ -66,7 +66,7 @@
     "    def _rating(self):\n",
     "        pass\n",
     "    def greet_passenger(self, _first, _last):\n",
-    "        return f\"H\""
+    "        return f\"Hello!\""
    ]
   },
   {
