automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -66,7 +66,7 @@
     "    def _rating(self):\n",
     "        pass\n",
     "    def greet_passenger(self, _first, _last):\n",
-    "        return f\"Hello! I'll be your driver today. My name is {_self.first} {self._las}\""
+    "        return f\"Hello! I'll be your driver today. My name is {self.first} {self._last}\""
    ]
   },
   {
