--- a/index.ipynb
+++ b/index.ipynb
@@ -58,7 +58,7 @@
     "    pass\n",
     "\n",
     "    def _first(self):\n",
-    "        pass\n",
+    "        self._first \n",
     "    def _last(self):\n",
     "        pass\n",
     "    def _miles_driven(self):\n",
