automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -55,7 +55,8 @@
    "source": [
     "# Define Driver Class here with properties for each instance variable\n",
     "class Driver:\n",
-    "    pass\n",
+    "    \n",
+    "    def __\n",
     "\n",
     "    def _first(self):\n",
     "        self._first = first\n",
