automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -56,7 +56,7 @@
     "# Define Driver Class here with properties for each instance variable\n",
     "class Driver:\n",
     "    \n",
-    "    def __init__(self, _first, _last)\n",
+    "    def __init__(self, _first, _last, _miles_driven)\n",
     "\n",
     "    def _first(self):\n",
     "        self._first = first\n",
