--- a/index.ipynb
+++ b/index.ipynb
@@ -56,16 +56,9 @@
     "# Define Driver Class here with properties for each instance variable\n",
     "class Driver:\n",
     "    \n",
-    "    def __init__(self, _first, _last, _miles_driven)\n",
+    "    def __init__(self, _first, _last, _miles_driven, _rating)\n",
     "\n",
-    "    def _first(self):\n",
-    "        self._first = first\n",
-    "    def _last(self):\n",
-    "        pass\n",
-    "    def _miles_driven(self):\n",
-    "        pass\n",
-    "    def _rating(self):\n",
-    "        pass\n",
+    "    \n",
     "    def greet_passenger(self, _first, _last):\n",
     "        return f\"Hello! I'll be your driver today. My name is {self._first} {self._last}\""
    ]
