automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -56,7 +56,9 @@
     "# Define Driver Class here with properties for each instance variable\n",
     "class Driver:\n",
     "    \n",
-    "    def __init__(self, _first, _last, _miles_driven, _rating)\n",
+    "    def __init__(self, _first, _last, _miles_driven, _rating):\n",
+    "        self._first = first\n",
+    "        se\n",
     "\n",
     "    \n",
     "    def greet_passenger(self, _first, _last):\n",
