automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -58,7 +58,8 @@
     "    \n",
     "    def __init__(self, _first, _last, _miles_driven, _rating):\n",
     "        self._first = first\n",
-    "        se\n",
+    "        self._last = last\n",
+    "        self._\n",
     "\n",
     "    \n",
     "    def greet_passenger(self, _first, _last):\n",
