--- a/index.ipynb
+++ b/index.ipynb
@@ -59,7 +59,7 @@
     "    def __init__(self, _first, _last, _miles_driven, _rating):\n",
     "        self._first = first\n",
     "        self._last = last\n",
-    "        self._\n",
+    "        self._miles_driven = miles\n",
     "\n",
     "    \n",
     "    def greet_passenger(self, _first, _last):\n",
