automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -59,7 +59,8 @@
     "    def __init__(self, _first, _last, _miles_driven, _rating):\n",
     "        self._first = first\n",
     "        self._last = last\n",
-    "        self._miles_driven = miles\n",
+    "        self._miles_driven = miles_driven\n",
+    "        self._rating \n",
     "\n",
     "    \n",
     "    def greet_passenger(self, _first, _last):\n",
