automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -60,8 +60,7 @@
     "        self._first = first\n",
     "        self._last = last\n",
     "        self._miles_driven = miles_driven\n",
-    "        self._rating \n",
-    "\n",
+    "        self._rating = rating\n",
     "    \n",
     "    def greet_passenger(self, _first, _last):\n",
     "        return f\"Hello! I'll be your driver today. My name is {self._first} {self._last}\""
