automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -52,7 +52,7 @@
    "outputs": [],
    "source": [
     "# Define Driver Class here with properties for each instance variable\n",
-    "class Driver:\n",
+    "class Driver():\n",
     "    \n",
     "    def __init__(self, _first, _last, _miles_driven, _rating):\n",
     "        self._first = first\n",
