automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -54,11 +54,7 @@
     "# Define Driver Class here with properties for each instance variable\n",
     "class Driver:\n",
     "    \n",
-    "    def __init__(self, _first, _last, _miles_driven, _rating):\n",
-    "        self._first = first\n",
-    "        self._last = last\n",
-    "        self._miles_driven = miles_driven\n",
-    "        self._rating = rating\n",
+    "    def \n",
     "    \n",
     "    def greet_passenger(self, _first, _last):\n",
     "        return f\"Hello! I'll be your driver today. My name is {self._first} {self._last}.\""
