--- a/index.ipynb
+++ b/index.ipynb
@@ -54,7 +54,8 @@
     "# Define Driver Class here with properties for each instance variable\n",
     "class Driver:\n",
     "    \n",
-    "    def \n",
+    "    def _first(self):\n",
+    "        \n",
     "    \n",
     "    def greet_passenger(self, _first, _last):\n",
     "        return f\"Hello! I'll be your driver today. My name is {self._first} {self._last}.\""
