automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -55,7 +55,10 @@
     "class Driver:\n",
     "    \n",
     "    def _first(self):\n",
-    "        self._first \n",
+    "        self._first = first\n",
+    "    \n",
+    "    def _first(self):\n",
+    "        self._first = first\n",
     "    \n",
     "    def greet_passenger(self, _first, _last):\n",
     "        return f\"Hello! I'll be your driver today. My name is {self._first} {self._last}.\""
