automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -57,7 +57,7 @@
     "    def _first(self):\n",
     "        self._first = first\n",
     "    \n",
-    "    def _first(self):\n",
+    "    def _last(self):\n",
     "        self._first = first\n",
     "        \n",
     "    \n",
