automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -54,10 +54,10 @@
     "# Define Driver Class here with properties for each instance variable\n",
     "class Driver:\n",
     "    \n",
-    "    def _first(self):\n",
+    "    def _first(self, first):\n",
     "        self._first = first\n",
     "    \n",
-    "    def _last(self):\n",
+    "    def _last(self, last):\n",
     "        self._first = first\n",
     "        \n",
     "    \n",
