automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -61,7 +61,7 @@
     "        self._first = first\n",
     "        \n",
     "    \n",
-    "    def _first(self):\n",
+    "    def _first(self, miles):\n",
     "        self._first = first\n",
     "    \n",
     "    def greet_passenger(self, _first, _last):\n",
