--- a/index.ipynb
+++ b/index.ipynb
@@ -61,8 +61,8 @@
     "        self._first = first\n",
     "        \n",
     "    \n",
-    "    def _first(self, miles):\n",
-    "        self._first = first\n",
+    "    def _first(self, miles.driven):\n",
+    "        self._miles = first\n",
     "    \n",
     "    def greet_passenger(self, _first, _last):\n",
     "        return f\"Hello! I'll be your driver today. My name is {self._first} {self._last}.\""
