--- a/index.ipynb
+++ b/index.ipynb
@@ -58,11 +58,10 @@
     "        self._first = first\n",
     "    \n",
     "    def _last(self, last):\n",
-    "        self._first = first\n",
+    "        self._first = last\n",
     "        \n",
-    "    \n",
     "    def _first(self, miles_driven):\n",
-    "        self._miles_driven = mile\n",
+    "        self._miles_driven = miles_driven\n",
     "    \n",
     "    def greet_passenger(self, _first, _last):\n",
     "        return f\"Hello! I'll be your driver today. My name is {self._first} {self._last}.\""
