automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -60,8 +60,10 @@
     "    def _last(self, last):\n",
     "        self._first = last\n",
     "        \n",
-    "    def _first(self, miles_driven):\n",
+    "    def _miles_driven(self, miles_driven):\n",
     "        self._miles_driven = miles_driven\n",
+    "        \n",
+    "    def _ra\n",
     "    \n",
     "    def greet_passenger(self, _first, _last):\n",
     "        return f\"Hello! I'll be your driver today. My name is {self._first} {self._last}.\""
