automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -63,7 +63,7 @@
     "    def _miles_driven(self, miles_driven):\n",
     "        self._miles_driven = miles_driven\n",
     "        \n",
-    "    def _ra\n",
+    "    def _rating(self, rating):\n",
     "    \n",
     "    def greet_passenger(self, _first, _last):\n",
     "        return f\"Hello! I'll be your driver today. My name is {self._first} {self._last}.\""
