automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,6 +64,7 @@
     "        self._miles_driven = miles_driven\n",
     "        \n",
     "    def _rating(self, rating):\n",
+    "        self._rating = rating\n",
     "    \n",
     "    def greet_passenger(self, _first, _last):\n",
     "        return f\"Hello! I'll be your driver today. My name is {self._first} {self._last}.\""
