automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -67,7 +67,7 @@
     "        self._rating = rating\n",
     "    \n",
     "    def greet_passenger(self, _first, _last):\n",
-    "        return f\"Hello! I'll be your driver today. My name is {self.first, self.\""
+    "        return f\"Hello! I'll be your driver today. My name is {self.first, self._last}\""
    ]
   },
   {
