--- a/index.ipynb
+++ b/index.ipynb
@@ -67,7 +67,7 @@
     "        self._rating = rating\n",
     "    \n",
     "    def greet_passenger(self, _first, _last):\n",
-    "        return f\"Hello! I'll be your driver today. My name is {self._first, self._last} {self._las}\""
+    "        return f\"Hello! I'll be your driver today. My name is {self._first} {self._last}\""
    ]
   },
   {
