--- a/index.ipynb
+++ b/index.ipynb
@@ -68,7 +68,7 @@
     "    \n",
     "    def greet_passenger(self, _first, _last):\n",
     "        \n",
-    "        return f\"Hello! I'll be your driver today. My name is \" + -"
+    "        return f\"Hello! I'll be your driver today. My name is \" + _first() + _"
    ]
   },
   {
