automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -67,7 +67,8 @@
     "        self._rating = rating\n",
     "    \n",
     "    def greet_passenger(self):\n",
-    "        self\n",
+    "        self._first = first\n",
+    "        self._last\n",
     "        return f\"Hello! I'll be your driver today. My name is {self._first} {self._last}\""
    ]
   },
