automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -68,7 +68,7 @@
     "    \n",
     "    def greet_passenger(self):\n",
     "        self._first = first()\n",
-    "        self._last = last()\n",
+    "        self._last = last\n",
     "        return f\"Hello! I'll be your driver today. My name is {self._first} {self._last}\""
    ]
   },
