automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -67,9 +67,9 @@
     "        self._rating = rating\n",
     "    \n",
     "    def greet_passenger(self):\n",
-    "        self._first = first()\n",
+    "        self._first = first\n",
     "        self._last = last\n",
-    "        return f\"Hello! I'll be your driver today. My name is {self._first} {self._last}\""
+    "        return f\"Hello! I'll be your driver today. My name is {self.first} {self._last}\""
    ]
   },
   {
