--- a/index.ipynb
+++ b/index.ipynb
@@ -126,7 +126,9 @@
    },
    "outputs": [],
    "source": [
-    "# Define Passenger Class here with properties for each instance variable"
+    "# Define Passenger Class here with properties for each instance variable\n",
+    "class Passenger:\n",
+    "    "
    ]
   },
   {
