automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -129,7 +129,20 @@
     "# Define Passenger Class here with properties for each instance variable\n",
     "class Passenger:\n",
     "    \n",
-    "    "
+    "    def _first(self, first):\n",
+    "        self._first = first\n",
+    "    \n",
+    "    def _last(self, last):\n",
+    "        self._first = last\n",
+    "        \n",
+    "    def _miles_driven(self, miles_driven):\n",
+    "        self._miles_driven = miles_driven\n",
+    "        \n",
+    "    def _rating(self, rating):\n",
+    "        self._rating = rating\n",
+    "    \n",
+    "    def greet_passenger(self):\n",
+    "        return f\"Hello! I'll be your driver today. My name is {self.first} {self.last}\""
    ]
   },
   {
