automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -135,11 +135,7 @@
     "    def _last(self, last):\n",
     "        self._first = last\n",
     "        \n",
-    "    def _miles_driven(self, miles_driven):\n",
-    "        self._miles_driven = miles_driven\n",
-    "        \n",
-    "    def _rating(self, rating):\n",
-    "        self._rating = rating\n",
+    "    def _email\n",
     "    \n",
     "    def greet_passenger(self):\n",
     "        return f\"Hello! I'll be your driver today. My name is {self.first} {self.last}\""
