--- a/index.ipynb
+++ b/index.ipynb
@@ -136,6 +136,7 @@
     "        self._first = last\n",
     "        \n",
     "    def _email\n",
+    "        self._email\n",
     "    \n",
     "    def greet_passenger(self):\n",
     "        return f\"Hello! I'll be your driver today. My name is {self.first} {self.last}\""
