--- a/index.ipynb
+++ b/index.ipynb
@@ -135,8 +135,8 @@
     "    def _last(self, last):\n",
     "        self._first = last\n",
     "        \n",
-    "    def _email\n",
-    "        self._email\n",
+    "    def _email(self, email)\n",
+    "        self._email = email\n",
     "    \n",
     "    def greet_passenger(self):\n",
     "        return f\"Hello! I'll be your driver today. My name is {self.first} {self.last}\""
