automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -135,7 +135,7 @@
     "    def _last(self, last):\n",
     "        self._first = last\n",
     "        \n",
-    "    def _email(self, email)\n",
+    "    def _email(self, email):\n",
     "        self._email = email\n",
     "    \n",
     "    def greet_passenger(self):\n",
