automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -139,7 +139,7 @@
     "        self._email = email\n",
     "    \n",
     "    def greet_passenger(self):\n",
-    "        return f\"Hello! I'll be your driver today. My name is {self.first} {self.last}.upper()\""
+    "        return f\"Hello! I'll be your driver today. My name is {self.first}.upper() {self.last}.upper()\""
    ]
   },
   {
