automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +136,7 @@
     "    def _email(self, email):\n",
     "        self._email = email\n",
     "    \n",
-    "    def greet_passenger(self):\n",
+    "    def yell_name(self):\n",
     "        return f\"{self.first}.upper() {self.last}.upper()\""
    ]
   },
