automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -137,7 +137,7 @@
     "        self._email = email\n",
     "    \n",
     "    def yell_name(self):\n",
-    "        self\n",
+    "        self.first \n",
     "        return f\"{self.first}.upper() {self.last}.upper()\""
    ]
   },
