--- a/index.ipynb
+++ b/index.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,13 +137,13 @@
     "        self._email = email\n",
     "    \n",
     "    def yell_name(self):\n",
-    "        self.first = self.first\n",
-    "        return f\"{self.first}.upper() {self.last}.upper()\""
+    "        self.first = self.first.upper()\n",
+    "        return f\"{self.first}.upper() {self.first}.upper()\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -158,10 +158,10 @@
     {
      "data": {
       "text/plain": [
-       "'Ron.upper() Burgundy.upper()'"
+       "'RON.upper() RON.upper()'"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
