automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -138,7 +138,8 @@
     "    \n",
     "    def yell_name(self):\n",
     "        self.first = self.first.upper()\n",
-    "        return f\"{self.first}.upper() {self.first}.upper()\""
+    "        self.last = \n",
+    "        return f\"{self.first}.upper() {self.last}.upper()\""
    ]
   },
   {
