automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,7 +138,7 @@
     "    \n",
     "    def yell_name(self):\n",
     "        self.first = self.first.upper()\n",
-    "        self.last = \n",
+    "        self.last = self.last.upper()\n",
     "        return f\"{self.first}.upper() {self.last}.upper()\""
    ]
   },
