automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -139,12 +139,12 @@
     "    def yell_name(self):\n",
     "        self.first = self.first.upper()\n",
     "        self.last = self.last.upper()\n",
-    "        return f\"{self.first}.upper() {self.last}.upper()\""
+    "        return f\"{self.first} {self.last}\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -159,10 +159,10 @@
     {
      "data": {
       "text/plain": [
-       "'RON.upper() RON.upper()'"
+       "'RON.upper() BURGUNDY.upper()'"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
